Terminado el Pago Tarjeta

--- a/gasolinera/animacionGasolina.html
+++ b/gasolinera/animacionGasolina.html
@@ -5,7 +5,8 @@
 	ejecutar = function(){
 		$("#atras").hide();
 		$("#siguiente").hide();
-		
+		$("#abrirmenu").hide();
+                
 		alert("Tiene que salir un mensaje que diga recoja su cambio si es true -> "+variables.recogerCambio);
 		alert("Hay que hacer el calcula entre los litros que se hechan: "+variables.litros+" y el espacio libre en el deposito: "+variables.espacioDeposito+"(Si sale 200 no hay que parar)");
 	};
