--- a/gasolinera/cantidad.html
+++ b/gasolinera/cantidad.html
@@ -163,8 +163,9 @@ var litros = 0;
 siguiente="confirmacion.html";
 atras = "manguera.html";
 ejecutar = function(){
-		$("#atras").show();
+        $("#atras").show();
         $("#siguiente").hide();
+        $("#abrirmenu").hide();
 		// euros por litro
 		conversion = 1.05;
 		$("#gasolina").html(variables.gasolina);
