--- a/gasolinera/finOperacion.html
+++ b/gasolinera/finOperacion.html
@@ -5,5 +5,7 @@
 	ejecutar = function(){
 		$("#atras").hide();
 		$("#siguiente").hide();
+                $("#abrirmenu").hide();
+                setTimeout(inicio, 5000);
 	};
 </script>
