--- a/gasolinera/pagoEfectivo.html
+++ b/gasolinera/pagoEfectivo.html
@@ -1,6 +1,6 @@
-<div id="monedasocultas" style="display: none">
+<div id="monedasOcultas" style="display: none">
     <div class="col-xs-12 ajustable" data-altura="10" style="z-index:2;position:fixed; padding: 0px">
-        <div class="botonesMonedas ajustAlt col-xs-11 invisible" data-altura="100" style=" padding: 0px" >
+        <div class="botonesMonedas ajustAlt col-xs-11" data-altura="100" style=" padding: 0px" >
 			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">
 				<img id="1cent" class="col-xs-1 ajustAlt" style="background-color: white" data-altura="100" data-valor="1" alt="moneda de 1 centimo" src="imagenes/metalico/1centimo.png"/>
 			</div>
@@ -38,11 +38,11 @@
 				<img id="50euros" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="5000" alt="billete de 50 euros" src="imagenes/metalico/50euros.png"/>
 			</div>	
         </div>
-        <div class="desplegable col-xs-1 ajustAlt" data-altura="100">
-            <img class="botonDesplegable col-xs-1  ajustAlt" data-altura="100" src="imagenes/menuAbrir.png"/>
+        <div class="desplegable col-xs-1 cerrarMenu ajustAlt" data-altura="100">
+            <img class="botonDesplegable col-xs-1  ajustAlt" data-altura="100" src="imagenes/menuCerrar.png"/>
         </div>
     </div>
-    <div class="litrosEnDeposito col-xs-12 ajustable invisible" data-margen="87.5" data-altura="12.5" style="z-index:2;position:fixed; padding: 0px; background-color: rgba(135,148,169,1)">
+    <div class="litrosEnDeposito col-xs-12 ajustable " data-margen="87.5" data-altura="12.5" style="z-index:2;position:fixed; padding: 0px; background-color: rgba(135,148,169,1)">
         <div class="col-xs-12 ajustMargen" data-margen="30">
             <label class="col-xs-offset-3 col-xs-2" style="height: 30%; text-align: right"  for="deposito">Espacio libre en el deposito: </label>
             <input id="cantidadDeposito" class="col-xs-1" style="height: 30%" name="deposito" min="0" type="number" /><label data-altura="30">&nbsp;litros</label>
@@ -55,6 +55,7 @@
 <div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto ajustMargen" data-margen="10" data-altura="20" data-modelo="textoModelo" style="text-align: center">Restante: <span id="restante">ERROR<span></div>
 <script>
 	atras = "tipoPago.html";
+        menu = "monedasOcultas";
 	var menuAbierto = false;
 	
 	var insertado = 0;
@@ -63,32 +64,16 @@
 	ejecutar = function(){
 		$("#atras").show();
 		$("#siguiente").hide();
-		
+		$("#abrirmenu").show();
 		variables.recogerCambio = false;
 		
-		add("<span id='monedas'>"+$("#monedasocultas").html()+"</span>");
 		
 		restante = variables.dinero;
 		$("#precio").html(((variables.dinero*1.0)/100).toFixed(2)+" €");
 		actualizarValores();
 	};
-	
-	$(document).ready(function(){
-		$(".desplegable").mouseup(function(){
-			if(menuAbierto){
-				$(".botonesMonedas").addClass("invisible");
-				$(".litrosEnDeposito").addClass("invisible");
-				$(".botonDesplegable").attr("src","imagenes/menuAbrir.png");
-				menuAbierto = false;
-			}else{
-				$(".botonesMonedas").removeClass("invisible");
-				$(".litrosEnDeposito").removeClass("invisible");
-				$(".botonDesplegable").attr("src","imagenes/menuCerrar.png");
-				menuAbierto = true;
-			}
-        });
-		
-		$(".efectivo").mouseup(function(){
+	logicaMenu = function(){
+            $(".efectivo").mouseup(function(){
 		
 			var valor = $(this).children().attr("data-valor");
 			
@@ -110,7 +95,7 @@
 					}
 					
 					variables.recogerCambio = true;
-					remove("monedas");
+					remove("menu");
 					prepararTexto();
 					ajustarTodo();
 					ejecutar();
@@ -123,14 +108,15 @@
 						variables.espacioDeposito = $("#espacioDeposito").val();
 					}
 					variables.recogerCambio = false;
-					remove("monedas");
+					remove("menu");
 					prepararTexto();
 					ajustarTodo();
 					ejecutar();
 				});
 			}
 		});
-	});
+        }
+
 	
 	function actualizarValores(){
 		$("#insertado").html(((insertado*1.0)/100).toFixed(2)+" €");
