--- a/gasolinera/tipoPago.html
+++ b/gasolinera/tipoPago.html
@@ -3,7 +3,7 @@
 </div>
 <div class="col-xs-12 ajustAlt" data-altura="100">
 	<div class="col-xs-4 ajustAlt ajustMargen" data-altura="75" data-margen="5">
-		<button button id="pagoEfectivo" class="btn-block" style="height: 100%">
+		<button id="pagoEfectivo" class="btn-block" style="height: 100%">
 			PAGO EN EFECTIVO<br/><br/>
 			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="10">
 				<img src="imagenes/pagoEnEfectivo.png"></img>
@@ -11,7 +11,7 @@
 		</button>
 	</div>
 	<div class="col-xs-4 ajustAlt ajustMargen" data-altura="75" data-margen="5">
-		<button button id="pagoTarjeta" class="btn-block" style="height: 100%">
+		<button id="pagoTarjeta" class="btn-block" style="height: 100%">
 			PAGO CON TARJETA<br/><br/>
 			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="10">
 				<img src="imagenes/pagoConTarjeta.png" style="max-width: 100%"></img>
@@ -38,7 +38,7 @@
 	ejecutar = function(){
 		$("#atras").show();
 		$("#siguiente").hide();
-		
+		$("#abrirmenu").hide();
 		// Caso de pago en efectivo
 		if(variables.recogerCambio){
 			var htmlPopUp = {
