redimension de imagenes y centrado de texto

--- a/gasolinera/cantidad.html
+++ b/gasolinera/cantidad.html
@@ -11,73 +11,73 @@
 	<!-- Centenas -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
-			<img class="boton invisible" data-valor="10000" data-unidad="dinero" src="imagenes/botonSumar.png"></button>
+			<img class="boton invisible" data-valor="10000" data-unidad="dinero" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green">
 			<span id="dineroCentenas" class="casillaNumero">0</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
-			<img class="boton invisible" data-valor="-10000" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+			<img class="boton invisible" data-valor="-10000" data-unidad="dinero" src="imagenes/botonRestar.png">
 		</div>	
 	</div>
 	<!-- Decenas -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
-			<img class="boton" data-valor="1000" data-unidad="dinero" src="imagenes/botonSumar.png"></img>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="1000" data-unidad="dinero" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green">
 			<span id="dineroDecenas" class="casillaNumero" style="border: 0px solid red">0</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
-			<img class="boton" data-valor="-1000" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="-1000" data-unidad="dinero" src="imagenes/botonRestar.png">
 		</div>		
 	</div>
 	<!-- Unidades -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
-			<img class="boton" data-valor="100" data-unidad="dinero" src="imagenes/botonSumar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="100" data-unidad="dinero" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt seguirTexto" data-modelo="textoLider" data-altura="50" style="border: 0px solid green; white-space: nowrap;">
 			<span id="dineroUnidades" class="casillaNumero">0 .</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
-			<img class="boton" data-valor="-100" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="-100" data-unidad="dinero" src="imagenes/botonRestar.png">
 		</div>
 	</div>
 	<!-- Decimas -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
-			<img class="boton" data-valor="10" data-unidad="dinero" src="imagenes/botonSumar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="10" data-unidad="dinero" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green">
 			<span id="dineroDecimas" class="casillaNumero">0</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
-			<img class="boton" data-valor="-10" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="-10" data-unidad="dinero" src="imagenes/botonRestar.png">
 		</div>		
 	</div>
 	<!-- Centesimas -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
-			<img class="boton" data-valor="1" data-unidad="dinero" src="imagenes/botonSumar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="1" data-unidad="dinero" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">
 			<span id="dineroCentesimas" class="casillaNumero">0</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="-1" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="-1" data-unidad="dinero" src="imagenes/botonRestar.png">
 		</div>	
 	</div>
 	<!-- Simbolo de € -->
     <div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px; height: 100%">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="1" data-unidad="litros" class="boton btn-block btn-info invisible"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="1" data-unidad="litros" class="boton btn-block btn-info invisible">
 		</div>	
 		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">
 			<span class="casillaNumero">€</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="-1" data-unidad="litros" class="boton btn-block btn-info invisible"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="-1" data-unidad="litros" class="boton btn-block btn-info invisible">
 		</div>
 	</div>
 </div>
@@ -86,72 +86,72 @@
 	<!-- Centenas -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton invisible" data-valor="10000" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+			<img class="boton invisible" data-valor="10000" data-unidad="litros" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">
 			<span id="litrosCentenas" class="casillaNumero">0</span> 
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton invisible" data-valor="-10000" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+			<img class="boton invisible" data-valor="-10000" data-unidad="litros" src="imagenes/botonRestar.png">
 		</div>
 	</div>
 	<!-- Decenas -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="1000" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="1000" data-unidad="litros" src="imagenes/botonSumar.png">
 		</div>	
 		<div id="textoLider" class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">	
 			<span id="litrosDecenas" class="casillaNumero">0</span>
 		</div>	
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">		
-			<img class="boton" data-valor="-1000" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="-1000" data-unidad="litros" src="imagenes/botonRestar.png">
 		</div>
 	</div>
 	<!-- Unidades -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="100" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="100" data-unidad="litros" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt seguirTexto" data-modelo="textoLider" data-altura="50" style="border: 0px solid green; white-space: nowrap;">	
 			<span id="litrosUnidades" class="casillaNumero">0 .</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="-100" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="-100" data-unidad="litros" src="imagenes/botonRestar.png">
 		</div>
 	</div>
 	<!-- Decimas -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="10" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="10" data-unidad="litros" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">	
 			<span id="litrosDecimas" class="casillaNumero">0</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="-10" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="-10" data-unidad="litros" src="imagenes/botonRestar.png">
 		</div>
 	</div>
 	<!-- Centesimas -->
 	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px; height: 100%">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="1" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="1" data-unidad="litros" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">	
 			<span id="litrosCentesimas" class="casillaNumero">0</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton" data-valor="-1" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+			<img class="boton" data-anchoImg='200' data-altoImg='100' data-valor="-1" data-unidad="litros" src="imagenes/botonRestar.png">
 		</div>
 	</div>
     <div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px; height: 100%">
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton invisible" data-valor="1" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+			<img class="boton invisible" data-valor="1" data-unidad="litros" src="imagenes/botonSumar.png">
 		</div>
 		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap">	
 			<span class="casillaNumero">litros</span>
 		</div>
 		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
-			<img class="boton invisible" data-valor="-1" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+			<img class="boton invisible" data-valor="-1" data-unidad="litros" src="imagenes/botonRestar.png">
 		</div>
 	</div>
 </div>
