--- a/lavado/tipoPago.html
+++ b/lavado/tipoPago.html
@@ -28,7 +28,7 @@
 	</div>
 </div>
 <script>
-	atras = "manguera.html";
+	atras = "seleccionarLavado.html";
 
 	// Para el caso de pago en efetivo en el que se vuelva habiendo hechado dinero
 	if(variables.recogerCambio == null){
