--- a/lavado/seleccionarLavado.html
+++ b/lavado/seleccionarLavado.html
@@ -1,30 +1,39 @@
 <div class="col-xs-12 ajustAlt" data-altura="100">
 	<div class="col-xs-4 ajustAlt ajustMargen" data-altura="90" data-margen="5">
 		<button id="lavadoInterior" class="btn-block" style="height: 100%">
-			<div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto" data-altura="25" data-modelo="textoModelo" style="border: 0px solid black">
+			<div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto" data-altura="15" data-modelo="textoModelo" style="border: 0px solid black">
 				LAVADO INTERIOR
 			</div>
-			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="10">
-				<img src="imagenes/lavadoInterior.png" style="max-width: 100%"></img>
+			<div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto" data-altura="0" data-modelo="textoModelo" style="border: 0px solid black">
+				(10.00€)
+			</div>
+			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="15">
+				<img src="imagenes/lavadoInterior.png"></img>
 			</div>
 		</button>
 	</div>
 	<div class="col-xs-4 ajustAlt ajustMargen" data-altura="90" data-margen="5">
 		<button id="lavadoExterior" class="btn-block" style="height: 100%">
-			<div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto" data-altura="25" data-modelo="textoModelo" style="border: 0px solid black">
+			<div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto" data-altura="15" data-modelo="textoModelo" style="border: 0px solid black">
 				LAVADO EXTERIOR
 			</div>
-			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="10">
-				<img src="imagenes/lavadoExterior.png" style="max-width: 100%"></img>
+			<div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto" data-altura="0" data-modelo="textoModelo" style="border: 0px solid black">
+				(3.00€)
+			</div>
+			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="15">
+				<img src="imagenes/lavadoExterior.png"></img>
 			</div>
 		</button>
 	</div>
 	<div class="col-xs-4 ajustAlt ajustMargen" data-altura="90" data-margen="5">
 		<button id="lavadoAmbos" class="btn-block" style="height: 100%">
-			<div id="textoModelo" class="col-xs-offset-1 col-xs-10 ajustAlt ajustTexto" data-altura="25" data-anchoTexto="100" data-altoTexto="100" style="border: 0px solid black">
+			<div id="textoModelo" class="col-xs-offset-1 col-xs-10 ajustAlt ajustTexto" data-altura="15" data-anchoTexto="100" data-altoTexto="100" style="border: 0px solid black">
 				LAVADO INTERIOR Y EXTERIOR
 			</div>
-			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="10">
+			<div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto" data-altura="0" data-modelo="textoModelo" style="border: 0px solid black">
+				(13.00€)
+			</div>
+			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="15">
 				<img src="imagenes/lavadoAmbos.png"></img>
 			</div>
 		</button>
@@ -33,15 +42,18 @@
 <script>
 	var atras = "index.html";
 	var siguiente = "index.html";
+	variables.precio = 0;
 	
 	ejecutar = function(){
 		$("#atras").hide();
 		$("#siguiente").hide();
+		$("#abrirmenu").hide();
 	};
 	
 	$(document).ready(function(){
 		$("#lavadoInterior").click(function(){
 			$("#contenido").load("tipoPago.html", function(){ 
+				variables.precio = 1000;
 				prepararTexto();
 				ajustarTodo();
 				ejecutar();
@@ -49,13 +61,15 @@
 		});
 		$("#lavadoExterior").click(function(){
 			$("#contenido").load("lavadoExterior.html", function(){ 
+				variables.precio = 300;
 				prepararTexto();
 				ajustarTodo();
-				ejecutar();
+				ejecutar();	
 			});
 		});
 		$("#lavadoAmbos").click(function(){
-			$("#contenido").load("lavadoExterior.html", function(){ 
+			$("#contenido").load("lavadoAmbos.html", function(){ 
+				variables.precio = 1300;
 				prepararTexto();
 				ajustarTodo();
 				ejecutar();
