Funcionalidad global terminada

--- a/aceiteYNeumaticos/finOperacion.html
+++ b/aceiteYNeumaticos/finOperacion.html
@@ -8,6 +8,7 @@
 	ejecutar = function(){
 		$("#atras").hide();
 		$("#siguiente").hide();
+		setTimeout(inicio, 5000);
 	};
 	
 	$(document).ready(function(){
