--- a/lavado/finOperacion.html
+++ b/lavado/finOperacion.html
@@ -11,6 +11,7 @@
 		$("#atras").hide();
 		$("#siguiente").hide();
 		$("#abrirmenu").hide();
+		setTimeout(inicio, 5000);
 	};
 	
 	$(document).ready(function(){
