--- a/gasolinera/pagoEfectivo.html
+++ b/gasolinera/pagoEfectivo.html
@@ -45,7 +45,7 @@
     <div class="litrosEnDeposito col-xs-12 ajustable " data-margen="87.5" data-altura="12.5" style="z-index:2;position:fixed; padding: 0px; background-color: rgba(135,148,169,1)">
         <div class="col-xs-12 ajustMargen" data-margen="30">
             <label class="col-xs-offset-3 col-xs-2" style="height: 30%; text-align: right"  for="deposito">Espacio libre en el deposito: </label>
-            <input id="cantidadDeposito" class="col-xs-1" style="height: 30%" name="deposito" min="0" type="number" /><label data-altura="30">&nbsp;litros</label>
+            <input id="espacioDeposito" class="col-xs-1" style="height: 30%" name="deposito" min="0" type="number" /><label data-altura="30">&nbsp;litros</label>
         </div>
     </div>
 </div>
@@ -55,7 +55,7 @@
 <div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto ajustMargen" data-margen="10" data-altura="20" data-modelo="textoModelo" style="text-align: center">Restante: <span id="restante">ERROR<span></div>
 <script>
 	atras = "tipoPago.html";
-        menu = "monedasOcultas";
+    menu = "monedasOcultas";
 	var menuAbierto = false;
 	
 	var insertado = 0;
