arreglado los popups cutres de adri

--- a/gasolinera/pagoNfc.html
+++ b/gasolinera/pagoNfc.html
@@ -30,6 +30,7 @@
 		$("#atras").show();
 		$("#siguiente").hide();
 		$("#abrirmenu").show();
+                variables.recogerCambio = false;
 	};
 	
 	logicaMenu = function(){
