--- a/gasolinera/pagoTarjeta.html
+++ b/gasolinera/pagoTarjeta.html
@@ -34,6 +34,7 @@
 		$("#atras").show();
 		$("#siguiente").hide();
                 $("#abrirmenu").show();
+                variables.recogerCambio = false;
                 intentos = 3;
                 
 	};
