--- a/lavado/pagoNfc.html
+++ b/lavado/pagoNfc.html
@@ -24,6 +24,7 @@
 		$("#atras").show();
 		$("#siguiente").hide();
 		$("#abrirmenu").show();
+                variables.recogerCambio = false;
 	};
 	
 	logicaMenu = function(){
